# a-ores.net-site

./: .ao_config.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  _config.yml  alra-rss.xml  alra.md  alra_updates.md  auto_updates.md  feed.xml  index.md  joraa_updates.md  portal_updates.md  pyproject.toml  rsss.md  trabalhar.md
_alra_updates/: 2024-08-21.md  2024-08-22.md  2024-08-23.md  2024-08-24.md  2024-08-26.md  2024-08-27.md  2024-08-28.md  2024-08-29.md  2024-08-30.md  2024-08-31.md  2024-09-02.md  2024-09-03.md  2024-09-04.md  2024-09-05.md  2024-09-06.md  2024-09-07.md  2024-09-08.md  2024-09-09.md  2024-09-10.md  2024-09-11.md  2024-09-12.md  2024-09-13.md  2024-09-16.md  2024-09-17.md  2024-09-18.md  2024-09-19.md  2024-09-20.md  2024-09-22.md  2024-09-23.md  2024-09-24.md  2024-09-25.md  2024-09-26.md  2024-09-27.md  2024-09-30.md  2024-10-01.md  2024-10-02.md  2024-10-03.md  2024-10-04.md  2024-10-06.md  2024-10-07.md  (+76 more)
_base_updates/: 2024-08-21.md  2024-08-22.md  2024-08-23.md  2024-08-26.md  2024-08-27.md  2024-08-28.md  2024-08-29.md  2024-08-30.md  2024-09-02.md  2024-09-03.md  2024-09-04.md  2024-09-05.md  2024-09-06.md  2024-09-09.md  2024-09-10.md  2024-09-11.md  2024-09-12.md  2024-09-13.md  2024-09-16.md  2024-09-17.md  2024-09-18.md  2024-09-19.md  2024-09-20.md  2024-09-23.md  2024-09-24.md  2024-09-25.md  2024-09-26.md  2024-09-27.md  2024-09-28.md  2024-09-30.md  2024-10-01.md  2024-10-02.md  2024-10-03.md  2024-10-04.md  2024-10-07.md  2024-10-08.md  2024-10-09.md  2024-10-10.md  2024-10-11.md  2024-10-12.md  (+67 more)
_complete_updates/: 2024-08-22.md  2024-08-26.md  2024-08-27.md  2024-08-28.md  2024-08-29.md  2024-08-30.md  2024-08-31.md  2024-09-04.md  2024-09-05.md  2024-09-07.md  2024-09-08.md  2024-09-10.md  (+34 more)
(+1802 files in other folders)
